--- a/src/styles/_summary.css
+++ b/src/styles/_summary.css
@@ -96,7 +96,7 @@
     }
 
     .summary {
-        /*margin-top: 113px;*/
+        margin-top: 91px;
     }
         .summary__heading {
             /*margin-top: 0;*/
