--- a/src/styles/_features.css
+++ b/src/styles/_features.css
@@ -69,6 +69,10 @@
 
             .features__action {
                 margin-top: 20px;
+                width: 100%;
+                max-width: var(--mobile-button);
+                margin-left: auto;
+                margin-right: auto;
             }
                 .features__action.button,
                 .features__action .button {
