--- a/src/styles/_trial.css
+++ b/src/styles/_trial.css
@@ -144,6 +144,7 @@
                         width: auto;
                         height: auto;
                         background-image: none;
+                        padding: 0;
                     }
 }
 
