--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -148,8 +148,8 @@
                                     Наталья
                                 </div>
                                 <div class="review__rating">
-                                    <div class="rating">
-                                        <div class="rating__value" style="width: 95%"></div>
+                                    <div class="simpler-rating">
+                                        <div class="simpler-rating__value" style="width: 95%"></div>
                                     </div>
                                 </div>
                             </div>
@@ -168,8 +168,8 @@
                                     Иван
                                 </div>
                                 <div class="review__rating">
-                                    <div class="rating">
-                                        <div class="rating__value" style="width: 92%"></div>
+                                    <div class="simpler-rating">
+                                        <div class="simpler-rating__value" style="width: 92%"></div>
                                     </div>
                                 </div>
                             </div>
@@ -183,8 +183,8 @@
                                     Ольга
                                 </div>
                                 <div class="review__rating">
-                                    <div class="rating">
-                                        <div class="rating__value" style="width: 88%"></div>
+                                    <div class="simpler-rating">
+                                        <div class="simpler-rating__value" style="width: 88%"></div>
                                     </div>
                                 </div>
                             </div>
@@ -203,8 +203,8 @@
                                     Елена
                                 </div>
                                 <div class="review__rating">
-                                    <div class="rating">
-                                        <div class="rating__value" style="width: 89%"></div>
+                                    <div class="simpler-rating">
+                                        <div class="simpler-rating__value" style="width: 89%"></div>
                                     </div>
                                 </div>
                             </div>
@@ -218,8 +218,8 @@
                                     Сергей
                                 </div>
                                 <div class="review__rating">
-                                    <div class="rating">
-                                        <div class="rating__value" style="width: 94%"></div>
+                                    <div class="simpler-rating">
+                                        <div class="simpler-rating__value" style="width: 94%"></div>
                                     </div>
                                 </div>
                             </div>
@@ -238,8 +238,8 @@
                                     Николай
                                 </div>
                                 <div class="review__rating">
-                                    <div class="rating">
-                                        <div class="rating__value" style="width: 90%"></div>
+                                    <div class="simpler-rating">
+                                        <div class="simpler-rating__value" style="width: 90%"></div>
                                     </div>
                                 </div>
                             </div>
