--- a/src/styles/_rating.css
+++ b/src/styles/_rating.css
@@ -1,14 +1,14 @@
-.rating {
+.simpler-rating {
     width: 102px;
     height: 18px;
-    background-image: url("../vectors/rating-background.svg");
+    background-image: url("../vectors/simpler-rating-background.svg");
     background-size: 102px 18px;
     background-repeat: no-repeat;
     background-position: left top;
 }
-    .rating__value {
+    .simpler-rating__value {
         height: 100%;
-        background-image: url("../vectors/rating-value.svg");
+        background-image: url("../vectors/simpler-rating-value.svg");
         background-size: 102px 18px;
         background-repeat: no-repeat;
         background-position: left top;
